--- a/less/signin.less
+++ b/less/signin.less
@@ -45,9 +45,14 @@ body.signin {
     background-size: cover;
     min-height: 90%;
     border-bottom: 1px solid #e7e7e7;
+    padding-bottom: 80px;
   }
 footer.signin {
   margin-top: 20px;
   font-size: smaller;
-  color: #D6D6D8;
+  color: #777;
+}
+h1 {
+  //display: inline-block;
+  font-size: 25px;
 }
