--- a/less/fixes.less
+++ b/less/fixes.less
@@ -4,3 +4,12 @@
 body {
 	padding-top: 100px;
 }
+.navbar-nav > li > a {
+	border-radius: @border-radius-base;
+	padding-top: 10px;
+    padding-bottom: 10px;
+}
+label {
+	text-transform: uppercase;
+	font-weight: normal;
+}
