--- a/less/variables-avi.less
+++ b/less/variables-avi.less
@@ -184,7 +184,9 @@
 //##
 
 //** `<input>` background color
-@input-bg:                       #fff;
+//@input-bg:                       #fff;
+
+@input-bg:                       #f5f5f5;
 //** `<input disabled>` background color
 @input-bg-disabled:              @gray-lighter;
 
@@ -203,7 +205,7 @@
 @input-border-radius-small:      @border-radius-small;
 
 //** Border color for inputs on focus
-@input-border-focus:             #66afe9;
+@input-border-focus:             #444444;
 
 //** Placeholder text color
 @input-color-placeholder:        #999;
