adiciona cambios para el sitio

--- a/less/fixes.less
+++ b/less/fixes.less
@@ -9,7 +9,7 @@ body {
 	padding-top: 10px;
     padding-bottom: 10px;
 }
-label {
+label, button, a.btn {
 	text-transform: uppercase;
 	font-weight: normal;
 }
