Cambios de estructura de árbol. Afición de nuevas paginas.

--- a/less/fixes.less
+++ b/less/fixes.less
@@ -13,3 +13,20 @@ label, button, a.btn {
 	text-transform: uppercase;
 	font-weight: normal;
 }
+.dropdown-menu > li > strong {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: bolder;
+    line-height: 1.42857143;
+    white-space: nowrap;
+    text-transform: uppercase;
+}
+.text-control {
+    display: block;
+    height: 34px;
+}
+
+.btn-right {
+    margin-top: 25px;
+}
