Cambios en diagramación de formularios Anexo de páginas Modificación árbol

--- a/less/fixes.less
+++ b/less/fixes.less
@@ -3,7 +3,9 @@
 }
 body {
 	padding-top: 100px;
+    background-color: #EAEAEA;
 }
+
 .navbar-nav > li > a {
 	border-radius: @border-radius-base;
 	padding-top: 10px;
