Adición de páginas Modificación de paginas actuales

--- a/less/fixes.less
+++ b/less/fixes.less
@@ -32,3 +32,14 @@ label, button, a.btn {
 .btn-right {
     margin-top: 25px;
 }
+.form-list label{
+    line-height: 34px;
+    height: 34px;
+}
+.form-list input[type='checkbox']{
+    line-height: 28px;
+    height: 28px;
+}
+.table.form-list > tbody > tr > td {
+    border-top: none;
+}
