--- a/less/variables-avi.less
+++ b/less/variables-avi.less
@@ -112,7 +112,8 @@
 //** Global color for active items (e.g., navs or dropdowns).
 @component-active-color:    #fff;
 //** Global background color for active items (e.g., navs or dropdowns).
-@component-active-bg:       @brand-primary;
+//@component-active-bg:       @brand-primary;
+@component-active-bg:       #777;
 
 //** Width of the `border` for generating carets that indicator dropdowns.
 @caret-width-base:          4px;
@@ -445,7 +446,8 @@
 //== Pills
 @nav-pills-border-radius:                   @border-radius-base;
 @nav-pills-active-link-hover-bg:            @component-active-bg;
-@nav-pills-active-link-hover-color:         @component-active-color;
+//@nav-pills-active-link-hover-color:         @component-active-color;
+@nav-pills-active-link-hover-color:         #BBB;
 
 
 //== Pagination
