Menu de países en login

--- a/less/fixes.less
+++ b/less/fixes.less
@@ -99,3 +99,28 @@ label, button, a.btn {
         color: #fff;
     }
 }
+.pre-header {
+    height: 50px;
+    line-height: 50px;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#d02e10+0,901a11+100 */
+    background: #d02e10; /* Old browsers */
+    background: -moz-linear-gradient(top,  #d02e10 0%, #901a11 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #d02e10 0%,#901a11 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #d02e10 0%,#901a11 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d02e10', endColorstr='#901a11',GradientType=0 ); /* IE6-9 */
+
+}
+.country {
+    a.dropdown-toggle {
+        color: #fff;
+    }
+    .dropdown-menu {
+        background-color: #000;
+    }
+    .dropdown-menu > li > a {
+        color: #fff;
+    }
+    .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
+        background-color: #444444;
+    }
+}
