--- a/less/fixes.less
+++ b/less/fixes.less
@@ -101,7 +101,7 @@ label, button, a.btn {
 }
 .pre-header {
     height: 50px;
-    line-height: 50px;
+    
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#d02e10+0,901a11+100 */
     background: #d02e10; /* Old browsers */
     background: -moz-linear-gradient(top,  #d02e10 0%, #901a11 100%); /* FF3.6-15 */
@@ -124,3 +124,35 @@ label, button, a.btn {
         background-color: #444444;
     }
 }
+ul.title-claro {
+    margin-bottom: 0px;
+    padding-top: 15px;
+}
+.pre-header {
+    box-shadow: 0 1px 15px rgba(0,0,0,0.5)
+}   
+.pre-header .title-claro li {
+    color: #fff;
+    float: left;
+    display: inline-block;
+}
+.pre-header .title-claro li:first-child {
+        border-right: 1px solid #901911;
+        padding-right: 15px;
+}
+.pre-header .title-claro li:last-child {
+        border-left: 1px solid #d42b24;
+        padding-left: 15px;
+}
+.pre-header .title-claro li:last-child::before {
+    border-color: #901a11 transparent transparent transparent;
+    border-style: solid;
+    border-width: 13px 12px 0 12px;
+    content: " ";
+    left: 120px;
+    position: absolute;
+    top: 50px;
+    z-index: 1;
+}
+
+/*40 top*/
