--- a/less/signin.less
+++ b/less/signin.less
@@ -1,6 +1,6 @@
 body.signin {
   padding-bottom: 40px;
-  background-color: #f8f8f8;
+
 }
 
 .form-signin {
@@ -44,7 +44,8 @@ body.signin {
     background-size: cover;
     min-height: 90%;
     border-bottom: 1px solid #e7e7e7;
-    padding-bottom: 80px;
+    border-radius: 6px;
+    border:  1px solid #DDD;
   }
 footer.signin {
   margin-top: 20px;
@@ -54,4 +55,7 @@ footer.signin {
 h1 {
   //display: inline-block;
   font-size: 25px;
+}
+.second-floor {
+  margin-top: 15px;
 }
