--- a/less/variables-avi.less
+++ b/less/variables-avi.less
@@ -8,7 +8,7 @@
 //## Gray and brand colors for use across Bootstrap.
 
 //@gray-base:              #000;
-@gray-base:              #444;
+@gray-base:              #000;
 @gray-darker:            lighten(@gray-base, 13.5%); // #222
 @gray-dark:              lighten(@gray-base, 20%);   // #333
 @gray:                   lighten(@gray-base, 33.5%); // #555
@@ -363,15 +363,15 @@
 //##
 
 // Basics of a navbar
-@navbar-height:                    80px;
+@navbar-height:                    50px;
 @navbar-margin-bottom:             @line-height-computed;
 @navbar-border-radius:             @border-radius-base;
 @navbar-padding-horizontal:        floor((@grid-gutter-width / 2));
-@navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 3.4);
+@navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
 @navbar-collapse-max-height:       340px;
 
 @navbar-default-color:             #777;
-@navbar-default-bg:                #f8f8f8;
+@navbar-default-bg:                #F8F8F8;
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 
 // Navbar links
